--- a/03 JS Basic/79-1 Score Keeper.html
+++ b/03 JS Basic/79-1 Score Keeper.html
@@ -4,27 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <style>
+      .winner {
+        color: greenyellow;
+      }
+      .loser {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <div>
       <h1>
-        <span class="p1Display">0</span> : <span class="p2Display">0</span>
+        <span id="p1Display">0</span> : <span id="p2Display">0</span>
       </h1>
-      <select class="match">
-        <option value="1">1</option>
-        <option value="2">2</option>
+      <select id="match">
         <option value="3">3</option>
-        <option value="4">4</option>
         <option value="5">5</option>
-        <option value="6">6</option>
         <option value="7">7</option>
-        <option value="8">8</option>
         <option value="9">9</option>
-        <option value="10">10</option>
+        <option value="11">11</option>
       </select>
-      <button class="btnOne">+ Player 1</button>
-      <button class="reset">Reset</button>
-      <button class="btnTwo">+ Player 2</button>
+      <button id="btnOne" type="button" class="btn btn-primary">+ Player 1</button>
+      <button id="reset" type="button" class="btn btn-secondary">Reset</button>
+      <button id="btnTwo" type="button" class="btn btn-warning">+ Player 2</button>
     </div>
     <script src="./79-2 Score Keeper.js"></script>
   </body>
