--- a/04 JS Advanced/19 API Search.html
+++ b/04 JS Advanced/19 API Search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animate</title>
+    <title>AniMate</title>
     <!--style link-->
     <link rel="stylesheet" href="19-2 style.css" />
     <link
@@ -16,14 +16,19 @@
   </head>
   <body>
     <!--Main-->
-    <form id="SearchForm">
-      <input
-        type="text"
-        name="searchBox"
-        placeholder="Find Anime with ANIMATE"
-      />
-      <button>Search</button>
-    </form>
+    <header>
+      <h1>Welcome to AniMate</h1>
+      <form id="search-form">
+        <input
+          type="text"
+          name="searchBox"
+          placeholder="Find Anime with ANIMATE"
+        />
+        <button>Search</button>
+      </form>
+    </header>
+
+    <main class="searchResult"></main>
     <!--Main-->
 
     <!--script-->
